--- a/cpython/MotorParams.ipynb
+++ b/cpython/MotorParams.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
-    "from tests_helper_functions import *\n",
+    "from helper_functions import *\n",
     "\n",
     "omega = rpm_to_rad_per_s(rpm=np.array([24.0, 63.0, 105.0, 138.0, 180.0, 213.0])).reshape((6,1))\n",
     "I = np.array([0.29, 0.28, 0.29, 0.30, 0.31, 0.32]).reshape((6,1))\n",
@@ -97,6 +97,14 @@
     "\n",
     "results = sm.OLS(y, X).fit()\n",
     "print(results.summary())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare this estimate with estimate based on measurements"
    ]
   },
   {
