Updated pybricks code, automated naming of files..

--- a/cpython/MotorParams.ipynb
+++ b/cpython/MotorParams.ipynb
@@ -46,16 +46,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4.5  6.   7.5  9.  10.5 12. ]\n",
-      "[0.29 0.28 0.29 0.3  0.31 0.32]\n",
-      "[ 2.51327412  6.59734457 10.99557429 14.45132621 18.84955592 22.30530784]\n",
       "                                 OLS Regression Results                                \n",
       "=======================================================================================\n",
       "Dep. Variable:                      y   R-squared (uncentered):                   1.000\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              1.000\n",
       "Method:                 Least Squares   F-statistic:                          2.152e+04\n",
-      "Date:                Sat, 04 Mar 2023   Prob (F-statistic):                    8.64e-09\n",
-      "Time:                        20:46:49   Log-Likelihood:                          6.3995\n",
+      "Date:                Sun, 05 Mar 2023   Prob (F-statistic):                    8.64e-09\n",
+      "Time:                        09:13:11   Log-Likelihood:                          6.3995\n",
       "No. Observations:                   6   AIC:                                     -8.799\n",
       "Df Residuals:                       4   BIC:                                     -9.215\n",
       "Df Model:                           2                                                  \n",
@@ -63,8 +60,8 @@
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "x1            12.6609      0.318     39.803      0.000      11.778      13.544\n",
-      "x2             0.3544      0.007     53.470      0.000       0.336       0.373\n",
+      "R             12.6609      0.318     39.803      0.000      11.778      13.544\n",
+      "K_e            0.3544      0.007     53.470      0.000       0.336       0.373\n",
       "==============================================================================\n",
       "Omnibus:                          nan   Durbin-Watson:                   3.485\n",
       "Prob(Omnibus):                    nan   Jarque-Bera (JB):                0.692\n",
@@ -88,22 +85,15 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import statsmodels.api as sm\n",
     "from helper_functions import *\n",
     "\n",
     "V = np.array([4.5, 6.0, 7.5, 9.0, 10.5, 12.0])\n",
-    "I = np.array([0.29, 0.28, 0.29, 0.30, 0.31, 0.32]).reshape((6,1))\n",
+    "I = np.array([0.29, 0.28, 0.29, 0.30, 0.31, 0.32])\n",
     "rpm = np.array([24.0, 63.0, 105.0, 138.0, 180.0, 213.0])\n",
-    "omega = rpm_to_rad_per_s(rpm=rpm).reshape((6,1))\n",
+    "omega = rpm_to_rad_per_s(rpm)\n",
     "\n",
-    "print(V)\n",
-    "print(I.flatten())\n",
-    "print(omega.flatten())\n",
+    "results = ols_voltage_current_rotations(V, I, omega)\n",
     "\n",
-    "X = np.hstack((I, omega))\n",
-    "y = V\n",
-    "\n",
-    "results = sm.OLS(y, X).fit()\n",
     "print(results.summary())"
    ]
   },
