Plotting of measured motor speed using colorsensor

--- a/cpython/motor_parameters.ipynb
+++ b/cpython/motor_parameters.ipynb
@@ -30,8 +30,26 @@
     "During steady state, the electrical equation of a DC motor simplifies to:\n",
     "\n",
     "\\begin{equation}\n",
-    "V = I R + K_e \\omega \n",
+    "V_{motor} = I R + K_e \\omega \n",
     "\\end{equation}\n",
+    "\n",
+    "\n",
+    "It is worth noting that voltage applied accross the motor is a function of the hub voltage and duty cycle:\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "V_{motor} (V_{hub}, u_{motor}) = (V_{hub} - a) u_{motor}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "where $a$ represent a voltage drop between the hubs voltage and voltage applied across the motor. Inserting this formulation back into the steady state electrical equation yields:\n",
+    "\n",
+    "\n",
+    "\\begin{align}\n",
+    "(V_{hub} - a) u_{motor} & = I R + K_e \\omega \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "\n",
     "\n",
     "Combining this with [Loaded characteristics; measured data](https://www.philohome.com/motors/motorcomp.htm) it is possible to use linear regression for estimating $R$ and $K_e$.\n",
     "\n"
@@ -87,12 +105,12 @@
     "import numpy as np\n",
     "from helper_functions import *\n",
     "\n",
-    "V = np.array([4.5, 6.0, 7.5, 9.0, 10.5, 12.0])\n",
+    "V_motor = np.array([4.5, 6.0, 7.5, 9.0, 10.5, 12.0])\n",
     "I = np.array([0.29, 0.28, 0.29, 0.30, 0.31, 0.32])\n",
     "rpm = np.array([24.0, 63.0, 105.0, 138.0, 180.0, 213.0])\n",
     "omega = rpm_to_rad_per_s(rpm)\n",
     "\n",
-    "results = ols_voltage_current_rotations(V, I, omega)\n",
+    "results = ols_motorvoltage_current_rotations(V_motor, I, omega)\n",
     "\n",
     "print(results.summary())"
    ]
@@ -997,7 +1015,7 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
-    "px.line(x=V, y=rpm, markers=True)"
+    "px.line(x=V_motor, y=rpm, markers=True)"
    ]
   },
   {
@@ -1067,7 +1085,7 @@
     "\n",
     "ss_time = [(0,800), (1000, 1800), (2000, 2800), (3000, 3800), (4000, 4800), (5000, 5800)]\n",
     "\n",
-    "V, I, omega, rpm = select_data_subset(data=data, ss_timestamps=ss_time)\n",
+    "V, I, omega, rpm = select_voltage_current_rotations_steady_state_subset(data=data, ss_timestamps=ss_time)\n",
     "\n",
     "print(V)\n",
     "print(I)\n",
